<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily RPG</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_character">Create</string>
    <string name="action_create_quest">New Quest</string>
    <string name="action_add_quest">Add Quest</string>
    <string name="action_delete_character">Delete</string>

    <string name="button_attack">Attack</string>
    <string name="button_defend">Defend</string>
    <string name="button_flee">Flee</string>
    <string name="button_level_up">Level Up</string>
    <string name="button_complete_quest">Complete Quest</string>
    <string name="button_close_window">Close</string>

    <string name="desc_char_avatar">Player Avatar</string>

    <string name="desc_warrior_class">Base HP: 100 Base Attack: 30 Base Defense: 30
        \nThe Warrior is competent in both attacking and defense, with an average amount of hitpoints.</string>
    <string name="desc_thief_class">Base HP: 70 Base Attack: 50 Base Defense: 10
        \nThe Thief sacrifices both hitpoints and defensive ability in exchange for an overwhelmingly powerful attack.</string>
    <string name="desc_paladin_class">Base HP: 100 Base Attack: 30 Base Defense: 30
        \nThe Paladin starts with a larger defensive bonus as well as more hitpoints, but this is at the cost of attacking power.</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="error_sign_in">A sign-in error has occurred, unable to sign in.</string>

    <string name="hint_create_character_name">Character Name</string>
    <string name="hint_char_name">Character Name</string>
    <string name="hint_quest_name">Quest Name</string>
    <string name="hint_quest_details">Quest Details</string>
    <string name="hint_experience_value">Experience Value</string>

    <string name="label_player_title">Player</string>
    <string name="label_enemy_title">Enemy</string>
    <string name="label_hp">HP: ???/???</string>
    <string name="label_attack">Attack: ???</string>
    <string name="label_defense">Defense: ???</string>
    <string name="label_exp">Exp: ???</string>
    <string name="label_status">Status</string>
    <string name="label_due_time">Time Due</string>
    <string name="label_details">Details</string>
    <string name="label_type">Type</string>
    <string name="label_level">Level</string>
    <string name="label_due_date">Due Date</string>

    <string name="title_activity_create_character">CreateCharacterActivity</string>
    <string name="title_activity_add_quest">AddQuestActivity</string>

    <string name="warning_no_character">You have no player avatar created. Tap the screen to create one.</string>
    <string name="warning_no_quests">No quests created. Select "NEW QUEST" to add a new quest.</string>

    <array name="nav_items">
        <item>Home</item>
        <item>Quests</item>
        <item>Dungeon</item>
    </array>

    <array name="class_names">
        <item>Warrior</item>
        <item>Thief</item>
        <item>Paladin</item>
    </array>

    <array name="quest_types">
        <item>Single</item>
        <item>Daily</item>
        <item>Monthly</item>
    </array>

</resources>
