<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#e8e6d4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="193dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="187dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rb_player_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_player_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/rb_player_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hp"/>

            <TextView
                android:id="@+id/rb_player_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_attack"/>

            <TextView
                android:id="@+id/rb_player_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_defense"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rb_enemy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_enemy_title"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/rb_enemy_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hp"/>

            <TextView
                android:id="@+id/rb_enemy_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_attack"/>

            <TextView
                android:id="@+id/rb_enemy_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_defense"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/rb_attack_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_attack"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/rb_defend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_defend"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/rb_flee_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_flee"
        />
</LinearLayout>