<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe8e6d4"
    >

    <TextView
        android:id="@+id/q_status_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/q_time_due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_due_time"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/q_status_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_details"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/q_status_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_type"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/q_status_complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_complete_quest"
        android:background="@drawable/button_selector"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/q_status_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close_window"
        android:background="@drawable/button_selector" />

</LinearLayout>